E-pharmacy application/kubernetes-Manifest/nginx-ingressResources.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: epharmacy-ingress
  namespace: Epharmacy
spec:
  defaultBackend:
    service:
      name: default-service
      port:
        number: 80
  ingressClassName: nginx
  tls:
    - hosts:
        - www.epharmacy.com
      secretName: gateway-secret  # Your TLS cert secret
  rules:
    - host: www.epharmacy.com
      http:   
        paths:
          - path: /epharmacy
            pathType: Prefix
            backend:
              service:
                name: frontendService
                port:
                  number: 80
          - path: /epharmacy/auth-api
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 1100
          - path: /epharmacy/customer-api
            pathType: Prefix
            backend:
              service:
                name: customer-service
                port:
                  number: 6100
          - path: /epharmacy/cart-api
            pathType: Prefix
            backend:
              service:
                name: cart-service
                port:
                  number: 6300
          - path: /epharmacy/medicine-api
            pathType: Prefix
            backend:
              service:
                name: medicine-service
                port:
                  number: 6200
          - path: /epharmacy/order-api
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 6500
          - path: /epharmacy/payment-api
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 6200
